--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
-title: Minimal theme
+title: <p align="center"> Bhargav Meka </p>
 logo: https://github.com/bhagmuniverse/minimal/blob/master/assets/img/OIG.jpeg
-description: Minimal is a theme for GitHub Pages.
+description: Bhargav is a senior solutions specialist responsible for driving sales and strategy for Microsoft Digital and App Innovation business for ITES-Strategic and Major customers in India. 
+His charter includes building app modernization strategy with customers driving DevOps, DevSecOps, Kubernetes, Containers, Application integration, Monolith to microservice conversations.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
